<resources>
    <string name="app_name">Home</string>
    <string name="mision">Mision</string>
    <string name="vision">Vision</string>
    <string name="about">About</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mail_adress">Mail Adress</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
</resources>
